[package]
name = "main"
version = "0.1.0"
authors = ["Daniel Pfaff <daniel.pfaff@in.tum.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = "0.7.2"     # Utilities for concurrent programming
fnv = "1.0.6"              # Fowler–Noll–Vo hash function
generic-array = "0.14.1"      # Generic types implementing functionality of arrays
hashbrown = "0.7.2"                # A Rust port of Google's SwissTable hash map
num_cpus = "1.13.0"           # Get the number of CPUs on a machine.
numeric-array = "0.5.0"    # Wrapper around generic-array that adds efficient numeric trait implementations
num-traits = "0.2.11"              # Numeric traits for generic mathematics
rayon = "1.3.0"               # Simple work-stealing parallelism for Rust
regex = "1.3.7"                  # An implementation of regular expressions for Rust. This implementation uses finite automata an…
toolshed = "0.8.1"    # Arena allocator and a handful of useful data structures
typed-arena = "2.0.1"                 # The arena, a fast but limited type of allocator
